deploy/rollouts/blue_green/ingress_preview.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextjs-example-ingress-bluegreen-preview
  namespace: nextjs-example
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nextjs-example-service-bluegreen-preview
            port:
              number: 3000
